fix: add scrollbar style

--- a/Front-End/src/styles.scss
+++ b/Front-End/src/styles.scss
@@ -74,6 +74,22 @@ body {
   position: relative;
 }
 
+::-webkit-scrollbar {
+    width: 4px;
+}
+
+::-webkit-scrollbar-track {
+    background: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+    background: rgb(0 0 0 / 20%);
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: rgb(0 0 0 / 25%);
+}
+
 button {
     outline: 0;
     border: 0;
